<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond_aplic">

    <TextView
        android:id="@+id/tvRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/rotulo" 
        android:textSize="12pt"
        android:textStyle="bold"
       android:textColor="#000000"/>
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/titulo" 
        android:textSize="8pt"
       android:textColor="#000000"
       android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="160dp"
        android:text="@string/autor" 
        android:textSize="8pt"
       android:textColor="#000000"
       android:textStyle="bold"/>
     <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="230dp"
        android:text="@string/categoria" 
        android:textSize="8pt"
       android:textColor="#000000"
       android:textStyle="bold"/>
     <TextView
        android:id="@+id/tvFechaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:text="@string/fecha_inicio" 
        android:textSize="8pt"
       android:textColor="#000000"
       android:textStyle="bold"/> 
     <TextView
        android:id="@+id/tvFechaFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="360dp"
        android:text="@string/fecha_fin" 
        android:textSize="8pt"
        android:textColor="#000000"
        android:textStyle="bold"/>
      <TextView
        android:id="@+id/tvValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="420dp"
        android:text="@string/valoracion" 
        android:textSize="8pt"
        android:textColor="#000000"
        android:textStyle="bold"/>


     <EditText
         android:id="@+id/etTitulo"
         android:layout_width="wrap_content" 
         android:layout_height="50dp"
         android:textSize="14dp"
         android:layout_alignBaseline="@+id/tvTitulo"
         android:layout_alignBottom="@+id/tvTitulo"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/tvFechaInicio"
         android:ems="15"
         android:maxLength="40">
         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/etAutor"
         android:layout_width="wrap_content" 
         android:layout_height="50dp"
         android:textSize="14dp"
         android:layout_alignBaseline="@+id/tvAutor"
         android:layout_alignBottom="@+id/tvAutor"
         android:layout_alignLeft="@+id/etTitulo"
         android:ems="15"         
        android:maxLength="24"/>

     <EditText
         android:id="@+id/etCategoria"
         android:layout_width="wrap_content" 
         android:layout_height="50dp"
         android:textSize="14dp"
         android:layout_alignBaseline="@+id/tvCategoria"
         android:layout_alignBottom="@+id/tvCategoria"
         android:layout_alignLeft="@+id/etTitulo"
         android:ems="15"         
        android:maxLength="20"/>

     <EditText
         android:id="@+id/etFechaInicio"
         android:layout_width="wrap_content" 
         android:layout_height="50dp"
         android:textSize="14dp"
         android:layout_alignBaseline="@+id/tvFechaInicio"
         android:layout_alignBottom="@+id/tvFechaInicio"
         android:layout_alignLeft="@+id/etTitulo"
         android:ems="15"         
        android:maxLength="10"/>

     <EditText
         android:id="@+id/etFechaFin"
         android:layout_width="wrap_content" 
         android:layout_height="50dp"
         android:textSize="14dp"
         android:layout_alignBaseline="@+id/tvFechaFin"
         android:layout_alignBottom="@+id/tvFechaFin"
         android:layout_alignLeft="@+id/etTitulo"
         android:ems="15"         
        android:maxLength="10" />

	<RatingBar
	    android:id="@+id/ratingbar"
      	android:isIndicator="false"
      	style="@style/foodRatingBar"	   
      	 android:layout_alignTop="@+id/tvValoracion"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/etTitulo"	    
	    android:numStars="10"
	    android:rating="0.5"
	    android:stepSize="0.5" />

	<Button
	    android:id="@+id/add_book"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="21dp"
	    android:layout_alignLeft="@+id/etTitulo"
	    android:layout_toRightOf="@+id/tvCategoria"
	    android:height="15pt"
	    android:onClick="newBook"
	    android:text="@string/button_add" />

		<Button
		    android:id="@+id/cancel_add_book"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@+id/add_book"
		    android:layout_alignBottom="@+id/add_book"
		    android:layout_toRightOf="@+id/tvRotulo"
		    android:height="15pt"
		    android:onClick="cacnewBook"
		    android:text="@string/button_cancel" />
 
</RelativeLayout>
