<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@drawable/fond_aplic" >
    

<TextView
    android:id="@+id/tvTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="20dp"
    android:textStyle="bold"
    android:textSize="12pt"
    android:textAlignment="center"
    android:textColor="#000000"
    android:text="TextView" />

<TextView
    android:id="@+id/tvWriter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="175dp"
    android:textSize="8pt"    
    android:layout_marginTop="140dp"
    android:textColor="#000000"
    android:text="@string/writer_detail" />

<TextView
    android:id="@+id/tvCategory"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tvWriter" 
    android:textSize="8pt"
    android:textColor="#000000"
    android:layout_marginTop="180dp"
    android:text="@string/category_detail" />

<TextView
    android:id="@+id/tvDateStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tvWriter"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="220dp"
    android:textSize="8pt"
    android:textColor="#000000"
    android:text="@string/dateStart_detail" />

<TextView
    android:id="@+id/tvDateEnd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tvDateStart"
    android:layout_marginTop="260dp"
    android:textSize="8pt"
    android:textColor="#000000"
    android:text="@string/dateEnd_detail" />

<TextView
    android:id="@+id/tvDaysReading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tvDateStart"
    android:layout_marginTop="300dp"
    android:textSize="8pt"
    android:textColor="#000000"
    android:text="@string/daysReading_detail" />

<TextView
    android:id="@+id/tv1"
    android:layout_width="wrap_content"    
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="20dp"
    android:textSize="10pt"
    android:textStyle="bold"
    android:layout_marginTop="140dp"
    android:textColor="#000000"
    android:text="@string/writer_detail" />

<TextView
    android:id="@+id/tv2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv1" 
    android:textSize="10pt"
    android:textStyle="bold"
    android:textColor="#000000"
    android:layout_marginTop="180dp"
    android:text="@string/category_detail" />

<TextView
    android:id="@+id/tv3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv1"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="220dp"
    android:textSize="10pt"
    android:textStyle="bold"
    android:textColor="#000000"
    android:text="@string/dateStart_detail" />

<TextView
    android:id="@+id/tv4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv1"
    android:layout_marginTop="260dp"
    android:textSize="10pt"
    android:textStyle="bold"
    android:textColor="#000000"
    android:text="@string/dateEnd_detail" />

<TextView
    android:id="@+id/tv5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv1"
    android:layout_marginTop="300dp"
    android:textSize="10pt"
    android:textStyle="bold"
    android:textColor="#000000"
    android:text="@string/daysReading_detail" />

<RatingBar
    android:id="@+id/ratingValoration"
    style="?android:attr/ratingBarStyleSmall"    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/tvTitle"
    android:layout_centerHorizontal="true"

    android:numStars="10"
/>

</RelativeLayout>